# coplen

./: .gitignore  README.md  pyproject.toml  readme.md  setup.py
coplen/: __main__.py  course.py
coplen/langs/: pt-br.json
coplen/templates/: ufsc.tex
examples/: makefile  plan.json  references.bib
templates/: ufsc.tex
