[tool.poetry]
name = "coplen"
version = "1.0.0"
description = "Course Plan Generator."
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]
license = "gpl-3.0"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
carl = "^0.0.7"
Jinja2 = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
